# content-recommendation

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
azure_function/: function_app.py  requirements.txt
notebooks/: 01_data_exploration.ipynb  02_baseline_recommender.ipynb  03_embeddings_reduits.ipynb  04_collaborative_filtering_surprise.ipynb
scripts/: test_baseline.py  test_full_clicks.py
src/recommender/: baseline.py
