[project]
name = "projet-10"
version = "0.1.0"
description = ""
authors = [
    {name = "Aurélien Gruzon",email = "aureliengruzon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (<3)",
    "numpy (<2)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "surprise (>=0.1,<0.2)",
    "scikit-surprise (>=1.1.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
